--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,16 +5,18 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 		<title>{{ .Title }} &middot; {{ .Site.Title }}</title>
 		<link rel="canonical" href="{{ .Permalink }}">
-		<link rel="stylesheet" type="text/css" href="/css/main.css" />
+		<link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}/css/main.css" />
 		{{ if .RSSLink }}
 			<link href="{{ .RSSLink }}" rel="alternative" type="application/rss+xml" title="{{ .Title }}" />
 		{{ end }}
 		{{ partial "head.html" . }}
+
+		{{ template "_internal/google_analytics.html" . }}
 	</head>
 	<body>
-		<a id="title" href="/" title="{{ .Site.Title }}">
+		<a id="title" href="{{ .Site.BaseURL }}" title="{{ .Site.Title }}">
 			{{ if .Site.Params.logo }}
-				<img id="logo" alt="Logo" src="{{ .Site.Params.logo }}" />
+				<img id="logo" alt="Logo" src="{{ .Site.Params.logo }}" style="border-radius: 50%; width: 15%"/>
 			{{ end }}
 			{{ if .Site.Title }}
 				<h1>{{ .Site.Title }}</h1>
@@ -27,37 +29,37 @@
 			{{ $icon_size := "64px" }}
 			{{ if .Site.Params.email }}
 			<a href="mailto:{{ .Site.Params.email }}" title="Email">
-				<img alt="Email" height="{{ $icon_size }}" width="{{ $icon_size }}" src="/images/email.svg" />
+				<img alt="Email" height="{{ $icon_size }}" width="{{ $icon_size }}" src="{{ .Site.BaseURL }}/images/email.svg" />
 			</a>
 			{{ end }}
 			{{ if .Site.Params.github }}
 			<a href="https://github.com/{{ .Site.Params.github }}" title="Github">
-				<img alt="GitHub" height="{{ $icon_size }}" width="{{ $icon_size }}" src="/images/github.svg" />
+				<img alt="GitHub" height="{{ $icon_size }}" width="{{ $icon_size }}" src="{{ .Site.BaseURL }}/images/github.svg" />
 			</a>
 			{{ end }}
 			{{ if .Site.Params.facebook }}
 			<a href="https://facebook.com/{{ .Site.Params.facebook }}" title="Facebook">
-				<img alt="Facebook" height="{{ $icon_size }}" width="{{ $icon_size }}" src="/images/facebook.svg" />
+				<img alt="Facebook" height="{{ $icon_size }}" width="{{ $icon_size }}" src="{{ .Site.BaseURL }}/images/facebook.svg" />
 			</a>
 			{{ end }}
 			{{ if .Site.Params.twitter }}
 			<a href="https://twitter.com/{{ .Site.Params.twitter }}" title="Twitter">
-				<img alt="Twitter" height="{{ $icon_size }}" width="{{ $icon_size }}" src="/images/twitter.svg" />
+				<img alt="Twitter" height="{{ $icon_size }}" width="{{ $icon_size }}" src="{{ .Site.BaseURL }}/images/twitter.svg" />
 			</a>
 			{{ end }}
 			{{ if .Site.Params.linkedin }}
 			<a href="https://linkedin.com/in/{{ .Site.Params.linkedin }}" title="LinkedIn">
-				<img alt="LinkedIn" height="{{ $icon_size }}" width="{{ $icon_size }}" src="/images/linkedin.svg" />
+				<img alt="LinkedIn" height="{{ $icon_size }}" width="{{ $icon_size }}" src="{{ .Site.BaseURL }}/images/linkedin.svg" />
 			</a>
 			{{ end }}
                         {{ if .Site.Params.youtube }}
-                        <a href="https://youtube.com/user/{{ .Site.Params.youtube }}" title="Youtube">
-                                <img alt="Youtube" height="{{ $icon_size }}" width="{{ $icon_size }}" src="/images/youtube.svg" />
+                        <a href="https://youtube.com/c/{{ .Site.Params.youtube }}" title="Youtube">
+                                <img alt="Youtube" height="{{ $icon_size }}" width="{{ $icon_size }}" src="{{ .Site.BaseURL }}/images/youtube.svg" />
                         </a>
                         {{ end }}
 		</div>
 		<div class="links">
-			<a href="/">Home</a>
+			<a href="{{ .Site.BaseURL }}">Home</a>
 			{{ range first 1 (where .Site.Pages "Type" "post") }}
 				<a href="/post/">Archive</a>
 			{{ end }}
